# binary-float-to-decimal

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
src/: main.c
